# vani

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  render.yaml
conformance/: README.md
conformance/tests/: code_switch.yaml  session_negotiation.yaml  turn_signals.yaml
demo/: live_cli.py
docs/: WHAT_IS_VANI.md
examples/: hinglish_support_agent.py  tamil_agritech_ivr.py
proto/vani/v1/: action.proto  session.proto  stream.proto
spec/: IndiaToolRegistry.md  VAM-Actions.md  VAM-CodeSwitch.md  VAM-Dialects.md  VAM-Overview.md  VAM-Transport.md
tests/: test_backends_base.py  test_conformance_yaml.py  test_gateway_stub.py  test_proto_stubs.py  test_session.py
vani/: __init__.py  session.py
vani/backends/: __init__.py  ai4bharat.py  base.py  bhashini.py  sarvam.py
vani/gateway/: __init__.py  stub.py
webapp/: requirements.txt  server.py
webapp/static/: index.html
